--- a/search-content.html
+++ b/search-content.html
@@ -31,13 +31,14 @@
 <div id="tabs">
 <ul>
 <li><a href="#tabs-1">Discussion</a></li>
-<li><a href="#tabs-2">Document</a></li>
-<li><a href="#tabs-3">Blog</a></li>
+<li><a href="#tabs-2">Discussion</a></li>
+<li><a href="#tabs-3">Document</a></li>
+<li><a href="#tabs-4">Blog</a></li>
 </ul>
-
 <div id="tabs-1" class="search-results"></div>
 <div id="tabs-2" class="search-results"></div>
 <div id="tabs-3" class="search-results"></div>
+<div id="tabs-4" class="search-results"></div>
 
 </div>
 
