--- a/search-content.html
+++ b/search-content.html
@@ -30,7 +30,7 @@
 <br>
 <div id="tabs">
 <ul>
-<li><a href="#tabs-1">Discussion</a></li>
+<li><a href="#tabs-1">All</a></li>
 <li><a href="#tabs-2">Discussion</a></li>
 <li><a href="#tabs-3">Document</a></li>
 <li><a href="#tabs-4">Blog</a></li>
