--- a/search-content.html
+++ b/search-content.html
@@ -9,7 +9,12 @@
 
 <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
 <script src="http://code.jquery.com/ui/1.9.1/jquery-ui.js"></script>
- 
+<script type="text/javascript" >
+$("#tabs-1").click(function() {
+  alert("Handler for .click() called.");
+});
+
+</script>
 <h3 align="center">Search </h3>
 <table align="center">
  <tr>
