--- a/search-content.html
+++ b/search-content.html
@@ -10,7 +10,7 @@
 <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
 <script src="http://code.jquery.com/ui/1.9.1/jquery-ui.js"></script>
 <script type="text/javascript" >
-$("#tabs-2").click(function() {
+$('.list li').click(function() {
   alert("Handler for .click() called.");
 });
 
@@ -34,7 +34,7 @@ $("#tabs-2").click(function() {
 <div class="withborder">
 <br>
 <div id="tabs">
-<ul>
+<ul class="tablist">
 <li><a href="#tabs-1">All</a></li>
 <li><a href="#tabs-2">Discussion</a></li>
 <li><a href="#tabs-3">Document</a></li>
