--- a/search-content.html
+++ b/search-content.html
@@ -10,8 +10,11 @@
 <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
 <script src="http://code.jquery.com/ui/1.9.1/jquery-ui.js"></script>
 <script type="text/javascript" >
-$('.list li').click(function() {
-  alert("Handler for .click() called.");
+$(document).ready(function() {
+
+    $('ul.tablist li').click(function(e) {
+        $(".content").html("");
+    });
 });
 
 </script>
