--- a/search-content.html
+++ b/search-content.html
@@ -13,7 +13,8 @@
 $(document).ready(function() {
 
     $('ul.tablist li').click(function(e) {
-        $(".content").html("");
+		$('.firstdiv').css('background-color', '#FFFFFF');
+        $(".content").hide();
     });
 });
 
