--- a/search-content.html
+++ b/search-content.html
@@ -1,16 +1,39 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script type="text/javascript" src="javascripts/search-content.js"></script>
+<script type="text/javascript" src="javascripts/jquery.paginate.js"></script>
 
 <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="stylesheets/Tab.css" type="text/css" media="screen" />
-
+<link rel="stylesheet" type="text/css" href="stylesheets/style.css" media="screen"/>
 <script type="text/javascript" src="src/jquery.scrollbars.js"></script>
 
 
 <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
 <script src="http://code.jquery.com/ui/1.9.1/jquery-ui.js"></script>
 <script type="text/javascript" >
-
+<script type="text/javascript">
+$(function() {
+			
+			$("#alltab").paginate({
+				count 		: 10,
+				start 		: 1,
+				display     : 7,
+				border					: true,
+				border_color			: '#fff',
+				text_color  			: '#fff',
+				background_color    	: 'black',	
+				border_hover_color		: '#ccc',
+				text_hover_color  		: '#000',
+				background_hover_color	: '#fff', 
+				images					: false,
+				mouse					: 'press',
+				onChange     			: function(page){
+											$('._current','#tabs-1').removeClass('_current').hide();
+											$('#p'+page).addClass('_current').show();
+										  }
+			});
+		});
+		</script>
 
 </script>
 <h3 align="center">Search </h3>
@@ -38,7 +61,9 @@
 <li><a href="#tabs-3">Document</a></li>
 <li><a href="#tabs-4">Blog</a></li>
 </ul>
-<div id="tabs-1" class="search-results"></div>
+<div id="tabs-1" class="search-results">
+<div id="alltab"></div>
+</div>
 <div id="tabs-2" class="search-results"></div>
 <div id="tabs-3" class="search-results"></div>
 <div id="tabs-4" class="search-results"></div>
